# cuuhomientrung

./: .env.sample  .gitignore  Dockerfile  Pipfile  README.md  SETUP-DOCKER.md  build_jenkins.sh  cuu_ho  docker-compose.yaml  install.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  run_clear_database.sh  run_clear_media.sh  run_clear_tasks.sh  run_command.sh  run_create_admin.sh  run_dump_database.sh  run_gunicorn_server.sh  run_migrate.sh  run_migrate_status_to_new_tables.sh  run_scheduler_server.sh  run_server.sh  run_shell.sh  run_stop_task_server.sh  run_task_server.sh  webpack.config.js  wsgi.py
.github/workflows/: codeql-analysis.yml
docs/: INSTALLATION.md  RUN.md
docs/installation-using-docker/: SET_UP_DOCKER.md
docs/installation-without-docker/: SET_UP_DATABASE.md  SET_UP_DEPENDENCIES.md  SET_UP_PIPENV.md  SET_UP_VIRTUALENV.md  SET_UP_WITH_POETRY.md
mobile/chmt/: .gitignore  README.md  pubspec.yaml
project/: db.json  db.sqlite3  start_gunicorn_api_server.sh  webpack-stats.json
project/app/: __init__.py  admin.py  apps.py  asgi.py  browser_crawler.py  business.py  celery_app.py  context_processors.py  docbao_crawler.py  forms.py  ho_dan_views.py  huong_dan_tnv_views.py  index.py  install.sh  middleware.py  models.py  serializer.py  settings.py  signals.py  thong_tin_views.py  urls.py  views.py  wsgi.py
project/templates/: ho_dan_add.html  ho_dan_index.html  ho_dan_view.html  home_index.html  huong_dan_tnv.html  layout.html  thong_tin.html
project/test/: bad_youtube_video_list_1.csv  production_input.csv  (+10 more)
requirements/: base.txt  development.txt  testing.txt
(+231 files in other folders)
