[tool.poetry]
name = "cuuhomientrung"
version = "0.1.0"
description = "Site hỗ trợ thông tin cứu hộ người dân miền Trung"
authors = ["Cuuhomientrung <https://github.com/Cuuhomientrung>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.1.3"
django-admin-autocomplete-filter = "^0.6.1"
django-admin-interface = "^0.14.0"
django-admin-list-filter-dropdown = "^1.0.3"
django-admin-numeric-filter = "^0.1.6"
django-admin-rangefilter = "^0.6.3"
django-appconf = "^1.0.4"
django-colorfield = "^0.3.2"
django-computed-property = "^0.3.0"
django-dynamic-raw-id = "^2.7"
django-easy-select2 = "^1.5.7"
django-environ = "^0.4.5"
django-extensions = "^3.0.9"
django-filter = "^2.4.0"
django-flat-responsive = "^2.0"
django-flat-theme = "^1.1.4"
django-mapbox-location-field = "^1.6.4"
django-multiselectfield = "^0.1.12"
django-restful-admin = "^1.1.3"
django-select2 = "^7.4.2"
django-select2-admin-filters = "^0.1.3"
django-simple-history = "^2.12.0"
django-smart-selects = "^1.5.9"
django-timezone-field = "^4.0"
django-webpack-loader = "^0.7.0"
djangorestframework = "^3.12.2"
djangorestframework-csv = "^2.1.0"
unicodecsv = "^0.14.1"
psycopg2 = "^2.8.6"
sentry-sdk = "^0.19.2"
Werkzeug = "^1.0.1"
xlrd = "^1.2.0"
XlsxWriter = "^1.3.7"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
django-debug-toolbar = "^3.1.1"
ipython = "^7.16.1"
factory-boy = "^3.1.0"
Faker = "^4.14.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
